[package]
name = "instance-chart"
version = "0.2.1"
edition = "2021"
authors = ["David Kleingeld"]
readme = "README.md"
description = "Chart (discover) instances of your application on the same network and or machine"
repository = "https://github.com/dvdsk/instance-chart"
license = "MIT"
keywords = ["multicast", "discovery", "mdns", "peers"]
categories = ["network-programming"]
exclude = [
	".github/workflows.test.yml",
	".gitignore",
]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
rand = {version = "0.8", features = ["small_rng"]}
tokio = {version = "1", features=["time", "net", "macros", "tracing", "rt", "sync"]}
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.4"
bincode = "1.3"
socket2 = "0.4"

[dev-dependencies]
mac_address = "1.1.3"
tracing-subscriber = {version = "0.3", features = ["fmt", "ansi", "env-filter"]}
tokio = {version = "1", features=["time", "net", "macros", "rt-multi-thread", "tracing"]}
console-subscriber = "0.1"
more-asserts = "0.2"
futures = "0.3"
indicatif = "0.16"
